--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,9 +28,10 @@ jobs:
 
       - name: Build EXE
         run: |
-          py -3 -m PyInstaller --noconfirm --clean --onefile --windowed --name DesktopClock --hidden-import PIL --hidden-import PIL.Image --hidden-import PIL.ImageTk clock_app.py
+          $exeName = "DesktopClock-$env:GITHUB_REF_NAME"
+          py -3 -m PyInstaller --noconfirm --clean --onefile --windowed --name $exeName --hidden-import PIL --hidden-import PIL.Image --hidden-import PIL.ImageTk clock_app.py
 
       - name: Publish Release
         uses: softprops/action-gh-release@v2
         with:
-          files: dist/DesktopClock.exe
+          files: dist/DesktopClock-${{ github.ref_name }}.exe
